# nekro-cc-sandbox

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.cursor/docs/: architecture.md  chat_discover.md  knowledge.md
.github/workflows/: publish.yml  test.yml
data/: settings.json
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: MarkdownView.tsx  ShellPanel.tsx
skills/predefined-skills/: agent-browser.md  gh.md
src/nekro_cc_sandbox/: __init__.py  enums.py  errors.py  main.py  settings.py
src/nekro_cc_sandbox/api/: __init__.py  events.py  messages.py  schemas.py  settings.py  shells.py  status.py
src/nekro_cc_sandbox/claude/: __init__.py  policy.py  runtime.py
src/nekro_cc_sandbox/extensions/: __init__.py  mcp.py  skills.py
src/nekro_cc_sandbox/shell/: __init__.py  manager.py
src/nekro_cc_sandbox/store/: __init__.py  pending.py
src/nekro_cc_sandbox/workspace/: __init__.py  manager.py  state.py
tests/: conftest.py
tests/e2e/: test_full_workflow.py
tests/integration/: conftest.py  test_api.py  test_message_with_mock_cli.py  test_settings_api.py  test_shells_api.py  test_status_api.py  test_workspace_manager.py
tests/providers/: __init__.py  test_anthropic.py  test_minimax.py
tests/unit/: test_api_models.py  test_claude_runtime.py  test_policy.py  test_workspace_state.py
